<resources>
    <string name="app_name">Android_forum</string>
    <string name="login_Email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_logIn">Log in</string>
    <string name="title_activity_list">listActivity</string>
    <string name="action_settings">Settings</string>
    
    <string name="log_out">Log out</string>

    <string name="topic">Topic</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>

    <string name="title">Title : </string>
    <string name="description">Description : </string>


    <!-- Button text -->
    <string name="Add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
