<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projet.esgi.android_forum.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_marginTop="200dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/edit_shape"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:src="@drawable/user_bar" />

            <View
                android:layout_gravity="center"
                android:layout_width="5dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:alpha="0.5"
                android:background="@drawable/divider_shape"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="250dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/imageView"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/white"
                android:hint="@string/login_Email"
                android:inputType="textMultiLine|textFilter|textVisiblePassword|textNoSuggestions"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorLink="@android:color/white"/>



        </LinearLayout>


        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_shape"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="6dp"
                android:alpha="0.5"
                android:src="@drawable/password" />

            <View
                android:layout_gravity="center"
                android:layout_width="5dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:alpha="0.5"
                android:background="@drawable/divider_shape"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/white"
                android:hint="@string/login_password"
                android:inputType="textMultiLine|textFilter|textVisiblePassword|textNoSuggestions"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_toRightOf="@+id/imageView"/>
        </LinearLayout>

        <Button
            android:id="@+id/logIn"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:text="@string/login_logIn"
            android:onClick="Login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/btn_shape"
            android:layout_height="50dp" />

    </LinearLayout>
</RelativeLayout>
